# micro-wasm

./: .gitignore  Cargo.toml  Makefile  micro_wasm.wasm  starter.js
.github/workflows/: pages.yml
assets/: index.html  starter.js
src/: lib.rs
