[package]
name = "micro-wasm"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]
#crate-type = ["cdylib", "rlib"]
#name = "like_a_lib"
#path = "src/main.rs"

#[[bin]]
#name = "like_a_bin"
#path = "src/main.rs"


#[dependencies]
#wasm-bindgen = "0.2.63"

#[dependencies.web-sys]
#version = "0.3.40"
#features = [
#  'Document',
#  'Element',
#  'HtmlElement',
#  'Node',
#  'Window',
#]

